# forApollo

./: .gitignore  CLAUDE.md  DEPENDENCY_RULES.md  Dockerfile.linux-arm64  Makefile  README.md  build.zig  build.zig.zon
agent-harness/: setup.py
agent-harness/cli_anything/: __init__.py
agent-harness/cli_anything/forapollo/: __init__.py  __main__.py  forapollo_cli.py
agent-harness/cli_anything/forapollo/core/: gnc.py
agent-harness/cli_anything/forapollo/skills/: SKILL.md
agent-harness/cli_anything/forapollo/utils/: forapollo_backend.py
docs/: BUILD_SYSTEM_FIX_INSTRUCTIONS.md  FORKERNELS_BUILD_STANDARD.md
docs/superpowers/plans/: 2026-03-21-forapollo-implementation.md
docs/superpowers/specs/: 2026-03-21-forapollo-universal-gnc-design.md
docs/targets/: linX86.md
python/: pyproject.toml
python/forapollo/: __init__.py  guidance.py  navigation.py  orbital.py
src/fortran/: forapollo_astro.f90  forapollo_coords.f90  forapollo_dynamics.f90  forapollo_environ.f90  forapollo_estimate.f90  forapollo_guidance.f90  forapollo_observe.f90  forapollo_propagate.f90  forapollo_time.f90
src/gpu/: forapollo_ekf_batch_gpu.cuf
src/zig/: cuda.zig  dispatch.zig  exports.zig  fortran.zig  kernels.zig  safety.zig
tests/fortran/: test_dynamics.f90  test_estimate.f90  test_observe.f90  test_propagate.f90
zig/src/: bindings_gpu.zig  device.zig  gpu_dispatch.zig
